// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders card tabs correctly 1`] = `
<div>
  <div
    class="zw-tabs zw-tabs--horizontal zw-tabs--card"
  >
    <div
      class="zw-tabs__header zw-tabs__header--md"
      style="padding:0"
    >
      <div
        class="zw-tabs__scroll"
      >
        <div
          class="zw-tabs__nav zw-tabs__nav--animated"
        >
          <div>
            <div
              class="zw-tabs__item zw-tabs__item--active"
            >
              Tab1
            </div>
            <div
              class="zw-tabs__item zw-tabs__item--disabled"
            >
              Tab2
            </div>
            <div
              class="zw-tabs__item"
            >
              Tab3
            </div>
            <div
              class="zw-tabs__item"
            >
              Tab4
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="zw-tabs__body zw-tabs__body--animated"
      style="margin-left:-0%"
    >
      <div
        class="zw-tabs__body__item zw-tabs__body__item--active"
      >
        <div
          style="padding:10px"
        >
          这是选项卡1的文字
        </div>
      </div>
      <div
        class="zw-tabs__body__item"
      >
        <div
          style="padding:10px"
        >
          这是选项卡2的文字
        </div>
      </div>
      <div
        class="zw-tabs__body__item"
      >
        <div
          style="padding:10px"
        >
          这是选项卡3的文字
        </div>
      </div>
      <div
        class="zw-tabs__body__item"
      >
        <div
          style="padding:10px"
        >
          这是选项卡4的文字
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders line tabs correctly 1`] = `
<div>
  <div
    class="zw-tabs zw-tabs--horizontal zw-tabs--card"
  >
    <div
      class="zw-tabs__header zw-tabs__header--md"
      style="padding:0"
    >
      <div
        class="zw-tabs__scroll"
      >
        <div
          class="zw-tabs__nav zw-tabs__nav--animated"
        >
          <div>
            <div
              class="zw-tabs__item zw-tabs__item--active"
            >
              Tab1
            </div>
            <div
              class="zw-tabs__item zw-tabs__item--disabled"
            >
              Tab2
            </div>
            <div
              class="zw-tabs__item"
            >
              Tab3
            </div>
            <div
              class="zw-tabs__item"
            >
              Tab4
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="zw-tabs__body zw-tabs__body--animated"
      style="margin-left:-0%"
    >
      <div
        class="zw-tabs__body__item zw-tabs__body__item--active"
      >
        <div
          style="padding:10px"
        >
          这是选项卡1的文字
        </div>
      </div>
      <div
        class="zw-tabs__body__item"
      >
        <div
          style="padding:10px"
        >
          这是选项卡2的文字
        </div>
      </div>
      <div
        class="zw-tabs__body__item"
      >
        <div
          style="padding:10px"
        >
          这是选项卡3的文字
        </div>
      </div>
      <div
        class="zw-tabs__body__item"
      >
        <div
          style="padding:10px"
        >
          这是选项卡4的文字
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders noborder-card tabs correctly 1`] = `
<div>
  <div
    class="zw-tabs zw-tabs--horizontal zw-tabs--noborder-card"
  >
    <div
      class="zw-tabs__header zw-tabs__header--md"
      style="padding:0"
    >
      <div
        class="zw-tabs__scroll"
      >
        <div
          class="zw-tabs__nav zw-tabs__nav--animated"
        >
          <div>
            <div
              class="zw-tabs__item zw-tabs__item--active"
            >
              Tab1
            </div>
            <div
              class="zw-tabs__item zw-tabs__item--disabled"
            >
              Tab2
            </div>
            <div
              class="zw-tabs__item"
            >
              Tab3
            </div>
            <div
              class="zw-tabs__item"
            >
              Tab4
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="zw-tabs__body zw-tabs__body--animated"
      style="margin-left:-0%"
    >
      <div
        class="zw-tabs__body__item zw-tabs__body__item--active"
      >
        <div
          style="padding:10px"
        >
          这是选项卡1的文字
        </div>
      </div>
      <div
        class="zw-tabs__body__item"
      >
        <div
          style="padding:10px"
        >
          这是选项卡2的文字
        </div>
      </div>
      <div
        class="zw-tabs__body__item"
      >
        <div
          style="padding:10px"
        >
          这是选项卡3的文字
        </div>
      </div>
      <div
        class="zw-tabs__body__item"
      >
        <div
          style="padding:10px"
        >
          这是选项卡4的文字
        </div>
      </div>
    </div>
  </div>
</div>
`;
